# python-project-52

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test-coverage.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  rollbar_middleware.py  settings.py  urls.py  views.py
task_manager/fixtures/: test_user.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests_labels/: test_labels_crud.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options.py
task_manager/statuses/tests_statuses/: test_statuses_crud.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels_tasklabelrelation_label.py  0003_alter_task_date_created.py
task_manager/tasks/tests_tasks/: test_tasks_crud.py  test_tasks_filter.py
task_manager/templates/: base.html  footer.html  form.html  index.html  navbar.html
task_manager/templates/labels/: labels_delete.html  labels_index.html
task_manager/templates/statuses/: delete.html  index.html
task_manager/templates/tasks/: task_delete.html  task_details.html  task_index.html
task_manager/templates/users/: delete.html  index.html
task_manager/tests/: base_test_case.py
task_manager/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  (+1 more)
(+1 files in other folders)
